--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/api": "^4.0.29",
+    "@aws-amplify/cli": "^7.6.5",
+    "aws-amplify": "^4.3.11",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
